// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionBar Basic 1`] = `
<div class="md-example-child md-example-child-action-bar md-example-child-0">
  <div class="md-action-bar">
    <!---->
    <div class="md-action-bar-group"><button type="button" class="md-button md-action-bar-button primary active block">
        <div class="md-button-inner">
          <!---->
          <p class="md-button-content">
            主要按钮
          </p>
        </div>
      </button></div>
  </div>
</div>
`;

exports[`ActionBar Demo Basic 1`] = `
<div class="md-example-child md-example-child-action-bar md-example-child-0">
  <div class="md-action-bar">
    <!---->
    <div class="md-action-bar-group"><button type="button" class="md-button md-action-bar-button primary active block">
        <div class="md-button-inner">
          <!---->
          <p class="md-button-content">
            主要按钮
          </p>
        </div>
      </button></div>
  </div>
</div>
`;

exports[`ActionBar Demo Multiple buttons 1`] = `
<div class="md-example-child md-example-child-action-bar md-example-child-0">
  <div class="md-action-bar">
    <!---->
    <div class="md-action-bar-group"><button type="button" class="md-button md-action-bar-button primary active block plain">
        <div class="md-button-inner">
          <!---->
          <p class="md-button-content">
            次要按钮
          </p>
        </div>
      </button><button type="button" class="md-button md-action-bar-button primary active block">
        <div class="md-button-inner">
          <!---->
          <p class="md-button-content">
            主要按钮
          </p>
        </div>
      </button></div>
  </div>
</div>
`;

exports[`ActionBar Demo Multiple buttons and disabled button 1`] = `
<div class="md-example-child md-example-child-action-bar md-example-child-1">
  <div class="md-action-bar">
    <!---->
    <div class="md-action-bar-group"><button type="button" disabled="disabled" class="md-button md-action-bar-button disabled active block plain">
        <div class="md-button-inner">
          <!---->
          <p class="md-button-content">
            次要按钮
          </p>
        </div>
      </button><button type="button" disabled="disabled" class="md-button md-action-bar-button disabled active block">
        <div class="md-button-inner">
          <!---->
          <p class="md-button-content">
            主要按钮
          </p>
        </div>
      </button></div>
  </div>
</div>
`;

exports[`ActionBar Demo With slot 1`] = `
<div class="md-example-child md-example-child-action-bar md-example-child-3">
  <div class="md-action-bar">
    <div class="md-action-bar-text"><span class="price">
      ¥128.00<small>起</small></span></div>
    <div class="md-action-bar-group"><button type="button" class="md-button md-action-bar-button primary active block">
        <div class="md-button-inner">
          <!---->
          <p class="md-button-content">
            主要按钮
          </p>
        </div>
      </button></div>
  </div>
</div>
`;

exports[`ActionBar Multiple buttons 1`] = `
<div class="md-example-child md-example-child-action-bar md-example-child-0">
  <div class="md-action-bar">
    <!---->
    <div class="md-action-bar-group"><button type="button" class="md-button md-action-bar-button primary active block plain">
        <div class="md-button-inner">
          <!---->
          <p class="md-button-content">
            次要按钮
          </p>
        </div>
      </button><button type="button" class="md-button md-action-bar-button primary active block">
        <div class="md-button-inner">
          <!---->
          <p class="md-button-content">
            主要按钮
          </p>
        </div>
      </button></div>
  </div>
</div>
`;

exports[`ActionBar Multiple buttons and disabled button 1`] = `
<div class="md-example-child md-example-child-action-bar md-example-child-1">
  <div class="md-action-bar">
    <!---->
    <div class="md-action-bar-group"><button type="button" disabled="disabled" class="md-button md-action-bar-button disabled active block plain">
        <div class="md-button-inner">
          <!---->
          <p class="md-button-content">
            次要按钮
          </p>
        </div>
      </button><button type="button" disabled="disabled" class="md-button md-action-bar-button disabled active block">
        <div class="md-button-inner">
          <!---->
          <p class="md-button-content">
            主要按钮
          </p>
        </div>
      </button></div>
  </div>
</div>
`;

exports[`ActionBar With slot 1`] = `
<div class="md-example-child md-example-child-action-bar md-example-child-3">
  <div class="md-action-bar">
    <div class="md-action-bar-text"><span class="price">
      ¥128.00<small>起</small></span></div>
    <div class="md-action-bar-group"><button type="button" class="md-button md-action-bar-button primary active block">
        <div class="md-button-inner">
          <!---->
          <p class="md-button-content">
            主要按钮
          </p>
        </div>
      </button></div>
  </div>
</div>
`;
